# 8-URL-Shortcut-Design

./: README.md  api_compose.yml
chojungho/: .pre-commit-config.yaml  Dockerfile  README.md  app-compose.yml  db-compose.yml  docker-compose.yml  pyproject.toml
chojungho/src/: .env.example  main.py
chojungho/src/api/: __init__.py
chojungho/src/api/v1/: __init__.py
chojungho/src/api/v1/url/: __init__.py  endpoint.py  model.py
chojungho/src/db/: __init__.py  db_model.py  rdb.py  redis_db.py
chojungho/src/gunicorn/: gunicorn_conf.py
chojungho/src/nginx/: nginx.conf
chojungho/src/scripts/: start.sh
funjo/: docker-compose.yml  nginx.conf
funjo/app/: Dockerfile  main.py  requirements.txt
funjo/app/templates/: index.html
funjo/cache/: Dockerfile
funjo/db/master/: Dockerfile  init.sql  pg_hba.conf  postgresql.conf  recovery.conf
funjo/db/slave/: Dockerfile  init_replication.sh  postgresql.conf
go_api/: Dockerfile  go.sum  main.go
go_api/cmd/: route.go
go_api/config/: config.go
simuiji/: README.md  api_compose.yml  db_compose.yml  docker-compose.yml  go.mod  go.sum
simuiji/data/: .env
simuiji/go_api/: go.mod  main.go
suim/: .env  docker-compose.yaml
suim/cache/: .env  docker-compose.yml  readme.md  redis.conf
suim/db_ha/: .env  docker-compose.yaml  init-db.sql  readme.md
suim/load_balancer/: .env  docker-compose.yaml  nginx.conf  readme.md
suim/web_server/: .env  config.py  docker-compose.yaml  docker.env  dockerfile  main.py  models.py  readme.md  requirements.txt
suim/web_sever/: alembic.ini  config.py  database.py  dockerfile
(+327 files in other folders)
